// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingForm Initial rendering With a collection with contents renders a row and list per advisor 1`] = `
<DocumentFragment>
  <div
    class="bookingForm"
  >
    <div>
      <hr />
      <label
        aria-labelledby="textfield-Your Name-label"
        class="mdc-text-field mdc-text-field--upgraded"
      >
        <span
          class="mdc-text-field__ripple"
        />
        <input
          class="mdc-text-field__input"
          required=""
          value=""
        />
        <span
          class="mdc-floating-label"
          id="textfield-Your Name-label"
        >
          Your Name
        </span>
        <span
          class="mdc-line-ripple mdc-line-ripple--deactivating"
          style="transform-origin: 0px center;"
        />
      </label>
      <hr />
    </div>
    <div
      class="availabilityTable mdc-data-table rmwc-data-table--sticky-rows rmwc-data-table--sticky-rows-1"
    >
      <table
        class="mdc-data-table__table"
      >
        <thead
          class="rmwc-data-table__head"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__header-row"
          >
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Advisor ID
            </th>
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Availabilities
            </th>
            <th
              class="rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="mdc-data-table__content"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__row"
          >
            <td
              class="advisorId mdc-data-table__cell rmwc-data-table__cell"
            >
              12321
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              <ul
                class="mdc-list mdc-list--dense"
              >
                <li
                  class="mdc-list-item mdc-list-item--disabled"
                  tabindex="0"
                >
                  <span
                    class="mdc-list-item__text"
                  >
                    12/20/2012 12:20 AM
                  </span>
                  <i
                    aria-hidden="true"
                    class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__meta"
                  >
                    calendar_today
                  </i>
                </li>
                <li
                  class="mdc-list-item mdc-list-item--disabled"
                  tabindex="0"
                >
                  <span
                    class="mdc-list-item__text"
                  >
                    12/20/2012 12:20 PM
                  </span>
                  <i
                    aria-hidden="true"
                    class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__meta"
                  >
                    calendar_today
                  </i>
                </li>
              </ul>
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
          </tr>
          <tr
            class="rmwc-data-table__row mdc-data-table__row"
          >
            <td
              class="advisorId mdc-data-table__cell rmwc-data-table__cell"
            >
              32123
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              <ul
                class="mdc-list mdc-list--dense"
              >
                <li
                  class="mdc-list-item mdc-list-item--disabled"
                  tabindex="0"
                >
                  <span
                    class="mdc-list-item__text"
                  >
                    12/21/2112 12:21 AM
                  </span>
                  <i
                    aria-hidden="true"
                    class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__meta"
                  >
                    calendar_today
                  </i>
                </li>
                <li
                  class="mdc-list-item mdc-list-item--disabled"
                  tabindex="0"
                >
                  <span
                    class="mdc-list-item__text"
                  >
                    12/21/2112 12:21 PM
                  </span>
                  <i
                    aria-hidden="true"
                    class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__meta"
                  >
                    calendar_today
                  </i>
                </li>
              </ul>
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BookingForm Initial rendering With a null collection renders a row indicating no availability 1`] = `
<DocumentFragment>
  <div
    class="bookingForm"
  >
    <div>
      <hr />
    </div>
    <div
      class="availabilityTable mdc-data-table rmwc-data-table--sticky-rows rmwc-data-table--sticky-rows-1"
    >
      <table
        class="mdc-data-table__table"
      >
        <thead
          class="rmwc-data-table__head"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__header-row"
          >
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Advisor ID
            </th>
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Availabilities
            </th>
            <th
              class="rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="mdc-data-table__content"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__row"
          >
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              No Availability
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BookingForm Initial rendering With an empty collection renders a row indicating no availability 1`] = `
<DocumentFragment>
  <div
    class="bookingForm"
  >
    <div>
      <hr />
    </div>
    <div
      class="availabilityTable mdc-data-table rmwc-data-table--sticky-rows rmwc-data-table--sticky-rows-1"
    >
      <table
        class="mdc-data-table__table"
      >
        <thead
          class="rmwc-data-table__head"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__header-row"
          >
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Advisor ID
            </th>
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Availabilities
            </th>
            <th
              class="rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="mdc-data-table__content"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__row"
          >
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              No Availability
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BookingForm Initial rendering With an undefined collection renders progress indicators 1`] = `
<DocumentFragment>
  <nav
    aria-label="Progress Bar"
    aria-valuemax="1"
    aria-valuemin="0"
    class="mdc-linear-progress mdc-linear-progress--indeterminate"
    role="progressbar"
  >
    <div
      class="mdc-linear-progress__buffering-dots"
    />
    <div
      class="mdc-linear-progress__buffer"
      style="transform: scaleX(1);"
    />
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
      style="transform: scaleX(1);"
    >
      <div
        class="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <div
        class="mdc-linear-progress__bar-inner"
      />
    </div>
  </nav>
</DocumentFragment>
`;
